--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: zhanebennett
 github_username:  zhaben
+disqus:
+  shortname: zhaben
 
 # Build settings
 markdown: kramdown
