--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,12 @@ github_username:  zhaben
 disqus:
   shortname: zhaben
 
+#Paypal
+donations:
+  paypal:
+    text:           Donate      # Button text
+    #id:               # PayPal button ID
+
 # Build settings
 markdown: kramdown
 theme: minima
