--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ linkedin_username: zhanebennett
 github_username:  zhaben
 #disqus:
 #  shortname: zhaben
-
+google_analytics: UA-135520235-1
 
 #Paypal
 donations:
