--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,18 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Zhane Bennett
 email: zhanebennett@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Learn more about me here!
-#Write an awesome description for your new site here. You can edit this
-#line in _config.yml. It will appear in your document head meta (for
-#Google search results) and in your feed.xml site description.
+author: Zhane Bennett
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://zhaben.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+#Social Profiles
 linkedin_username: zhanebennett
 github_username:  zhaben
-#disqus:
-#  shortname: zhaben
+
+#Site Features
+disqus:
+  shortname: zhaben
 google_analytics: 'UA-135520235-1'
 
 #Paypal
@@ -36,9 +23,12 @@ donations:
 
 # Build settings
 markdown: kramdown
-theme: minima
+paginate: 5
+paginate_path: "/posts/page:num/"
+theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
