--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:             Zhane Bennett
-email:             zsb2107@columbia.edu
+email:             zhanebennett@gmail.com
 description:       Learn more about me here!
 author:            Zhane Bennett
 baseurl:           ""
